Added better formatting for notes

--- a/entries/080226-2231_overview.md
+++ b/entries/080226-2231_overview.md
@@ -1,4 +1,9 @@
-# Overview  
-ID: 080226-2231
-Date: 08-02-2026
+# Overview {#080226-2231}
 
+## Context
+Introduces the basics of the course and what we will cover. Expected to:
+
+- Learn C independently
+- Maintain logbook
+
+> Note: This lecture just went over basics and not a lot of actual content
