Added multitasking lecture

--- a/entries/080226-2231_overview.md
+++ b/entries/080226-2231_overview.md
@@ -1,11 +1,5 @@
 # Overview {#080226-2231}
-
-## Context
-Introduces the basics of the course and what we will cover. Expected to:
-
-- Learn C independently
-- Maintain logbook
-
+---
 ## Embedded Systems
 Expected to be incredibly reliable as they are often used in environments that are hard to access and so have to be able to handle any issues. Examples/properties of embedded systems include:
 
@@ -19,7 +13,7 @@ When creating operating systems for these systems, we need to consider power con
 ## Baremetal Programming
 Essentially all about coding without an operating system. There are no systems in place to handle memory or any services
 
-> Note: When doing realtime systems we also need to remember to introduce interrupts
+> When doing realtime systems we also need to remember to introduce interrupts
 
 Baremetal programming (bare metal programming) all about interacting directly with hardware. This is often why C is the first language that gets ported to an embedded system.
 
@@ -47,7 +41,7 @@ Other important functions of an OS include resource management in the form of:
 
 When looking at resource management, a lot of these resources are not real. We make these resources virtual for efficiency reasons and ensuring the OS is fast and is not consuming too much energy. This means we often place hard limits on the sizes of data structures that these resources can handle.
 
-> Note: As soon as we put a hard limit on something, it becomes a resource that needs to be managed. Even if it is virtual, it can cause a deadlock
+> As soon as we put a hard limit on something, it becomes a resource that needs to be managed. Even if it is virtual, it can cause a deadlock
 
 ### Interaction Management
 
@@ -85,7 +79,7 @@ C had to have these properties:
 
   - printf function had a variable number of arguments depending on the fstring passed which means it was not mathematically pure
 
-    > Note: An fstring, is essentially a string that supports special variables to be passed alongside it. eg. 
+    > An fstring, is essentially a string that supports special variables to be passed alongside it. eg. 
     ``` printf("My first number is %d and my second number is %d", 3, 5)  ```
 
   - Variables could be of any size, meaning you could load a file of several MB into a variable despite systems of the time only having fixed memory limitations in the KB range.
@@ -140,3 +134,4 @@ C has some unspecified behaviours. For example, an int can be of any size. It is
 Undefined behaviours when you do something that isn't defined in the language or the compiler. Not clear what will happen and should be avoided at all times.
 
 Unexpected behaviour is when the program does not know what is supposed to happen. This often happens because the programmer made an incorrect assumption (eg. ignored precedence, forgot quotation marks)
+
